
Changed  the engine  architecture  so it  is  more event  driven.   It now  uses
callbacks, making it easier to add new event types.

Added utility config_vp.py, for configuring the VantagePro hardware.

Added utility config_database.py, for configuring the databases.

Made it easier  to write custom RESTful protocols. Thanks to  user Brad, for the
idea and the use case!

When doing DMPAFT, no longer tries to correct for DST.

The stats  type 'squarecount' now contains  the number of  valid wind directions
that went into calculating 'xsum' and 'ysum'.  It used to be the number of valid
wind speeds.  Wind  direction is now calculated using  'squarecount' (instead of
'count').

Simplified and reduced the memory requirements of the CRC16 calculations.

Improved test suites.

Lots of  little nips  and tucks here  and there,  mostly to reduce  the coupling
between  different  modules.   In  particular,  now  a  service  generally  gets
configured only using its section of weewx.conf.

I also worked hard at making  sure that cursors, connections, files, and lots of
other  bits  and  pieces get  properly  closed  instead  of relying  on  garbage
collection.  Hopefully, this will reduce the long-term growth of memory usage.


1.14.1 07/06/12

Hardened retry  strategy for the  WeatherLink IP. If  the port fails to  open at
all, or a socket error occurs, it will thrown an exception (resulting in a retry
in 60 seconds).   If a socket returns an incomplete result,  it will continue to
retry until everything has been read.

Fixed minor bug that causes the  reporting thread to prematurely terminate if an
exception is thrown while doing an FTP.


1.14.0 06/18/12

Added  smartphone  formatted  mobile   webpage,  contributed  by  user  Torbjörn
Einarsson.  If you are doing a fresh install, then these pages will be generated
automatically.  If you  are doing an upgrade, then see the  upgrade guide on how
to have these webpages generated. Thanks, Tobbe!
