@@ -32,7 +32,7 @@ WEEWX_ROOT = /home/weewx
 socket_timeout = 20
 
 # Current version
-version = 2.0.0b12
+version = 2.0.0b13
 
 ############################################################################################
 
